<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Destinations -->
    <string name="pet_profile_name">Pet Profile Screen</string>

    <!-- Toolbar Titles -->
    <string name="edit_picture_menu_title">Edit Picture</string>
    <string name="add_owner_menu_title">Add Owner</string>
    <string name="open_gallery_menu_title">Open Gallery</string>

    <!-- Views -->
    <string name="my_pets_title">My Pets</string>
    <string name="add_new_pet">Add new pet</string>
    <string name="info">Info</string>
    <string name="owners">Owners</string>
    <string name="animal_field">%s | %s</string>
    <string name="input_dialog_pet_name_hint">Pet name</string>
    <string name="edit_ownership_sheet_title">Select Ownership</string>
    <string name="apply_button">Apply</string>
    <string name="select_animal_title">Select Animal</string>
    <string name="select_breed_title">Select Breed</string>
    <string name="invite_button">Invite</string>
    <string name="send_button">Send</string>
    <string name="invite_owners_title">Invite Owners</string>
    <string name="invite_owners_hint">Search names</string>
    <string name="invite_owners_empty_list">No search results</string>
    <string name="invite_message">Invitation sent to %s!</string>
    <string name="pets_empty_message">You don\'t have any pets yet.\n Try adding a new one on the + above</string>
    <string name="report_lost_message">Are you sure you want to report %s as lost?</string>
    <string name="report_lost_dialog_title">Report Lost</string>
    <string name="report_lost_dialog_confirm_button">Report</string>
    <string name="pet_safe_status">Safe</string>
    <string name="pet_lost_status">Lost</string>
    <string name="pet_report_lost_confirmation">%s was reported lost</string>
    <string name="pet_report_safe_confirmation">%s is now safe</string>
    <string name="not_available_result">This Tag is not available</string>
    <string name="change_tag_dialog_title">Change Tag</string>
    <string name="change_tag_dialog_content">Scan the new Tag for your pet.</string>

    <!-- Content Descriptions -->
    <string name="pet_picture_content_description">Pet profile picture</string>
    <string name="pet_favorite_icon_content_description">Pet favorite icon</string>
    <string name="profile_name_edit_icon_content_description">Pet name edit icon</string>
    <string name="pet_animal_icon_content_description">Pet animal icon</string>
    <string name="pet_animal_edit_icon_content_description">Pet animal edit icon</string>
    <string name="pet_breed_icon_content_description">Pet breed icon</string>
    <string name="pet_breed_edit_icon_content_description">Pet breed edit icon</string>
    <string name="pet_tag_icon_content_description">Pet tag icon</string>
    <string name="pet_tag_edit_icon_content_description">Pet tag edit icon</string>
</resources>