<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/owner_invite_title"
        style="@style/Headline6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:text="@string/invite_owners_title"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/owners_list_empty"
        style="@style/Body2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/owner_invite_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/barrier"
        android:layout_marginTop="@dimen/margin_small"
        android:padding="@dimen/margin_extra_large"
        android:gravity="center"
        android:alpha="0.5"
        android:background="?attr/colorSurface"
        android:visibility="gone"
        android:text="@string/invite_owners_empty_list"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/owners_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/owner_invite_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/barrier"
        app:layout_constrainedHeight="true"
        android:layout_marginTop="@dimen/margin_large"
        android:paddingStart="@dimen/margin_medium"
        android:paddingEnd="@dimen/margin_medium"
        android:clipToPadding="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:barrierDirection="bottom"
        app:barrierAllowsGoneWidgets="false"
        app:constraint_referenced_ids="owners_list,owners_list_empty"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/search_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_large"
        android:paddingTop="@dimen/margin_medium"
        android:paddingBottom="@dimen/margin_medium"
        android:textAppearance="@style/Body1"
        android:hint="@string/invite_owners_hint"
        android:drawableEnd="@drawable/ic_baseline_search"
        android:inputType="textCapWords|textPersonName"
        android:maxLines="1"/>

</androidx.constraintlayout.widget.ConstraintLayout>